<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="144dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exercise"
        app:srcCompat="@drawable/design"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_exercise"

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8739F4"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/exercise"
        android:textColor="#FFF9F9"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_familiarization" />

    <Button
        android:id="@+id/btn_familiarization"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8739F4"
        android:fadingEdge="vertical|none"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/familiarization"
        android:textColor="#FFF9F9"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/interactive_braille_system"
        android:textAlignment="center"
        android:textColor="#8E0303"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_familiarization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/SettingsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:text="@string/settings"
                android:textColor="#8E0303"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:srcCompat="@drawable/ic_dropdown_arrow"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:srcCompat="@drawable/ic_dropdown_arrow"
                android:contentDescription="@string/todo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingBottom="12dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#8739F4"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/search"
                    android:textColor="#FFF9F9"
                    android:textSize="20sp"
                    app:cornerRadius="50dp"
                    app:layout_constraintEnd_toEndOf="@id/expandableView"
                    app:layout_constraintStart_toStartOf="@id/expandableView"
                    app:layout_constraintTop_toTopOf="@id/expandableView" />

                <ListView
                    android:id="@+id/listview"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:paddingBottom="16dp"
                    app:layout_constraintEnd_toEndOf="@id/expandableView"
                    app:layout_constraintStart_toStartOf="@id/expandableView"
                    app:layout_constraintTop_toBottomOf="@+id/btn_search"
                    tools:layout_editor_absoluteY="296dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>